--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,12 @@
 buildscript {
     
     repositories {
-        google()
-        jcenter()
+        // google()
+        // jcenter()
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+          maven { url 'https://maven.aliyun.com/repository/google' }
+          maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+          maven { url 'https://maven.aliyun.com/repository/jcenter'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
@@ -17,8 +21,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        // google()
+        // jcenter()
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter'}
     }
 }
 
